<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <include layout="@layout/title2" />
    <EditText
        android:id="@+id/et_1"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:hint="@string/main_name1"
        android:layout_gravity="center"
        android:drawablePadding="5dp"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="16sp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ac_frame"
        android:backgroundTint="@color/LightGrey"
        />
    <EditText
        android:id="@+id/et_2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:hint="@string/main_name2"
        android:layout_gravity="center"
        android:drawablePadding="5dp"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ac_frame"
        android:backgroundTint="@color/LightGrey"
        />
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/et_3"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:text="@string/two_name1"
            android:background="@drawable/ac_frame"
            android:backgroundTint="@color/LightGrey"
            android:drawableEnd="@drawable/ic_rmb"
            />

        <EditText
            android:id="@+id/et_4"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/et_3"
            android:background="@drawable/ac_frame"
            android:backgroundTint="@color/LightGrey"
            android:text="@string/two_name2"
            android:layout_marginLeft="20dp"
            android:drawableEnd="@drawable/ic_rmb"
            />
    </RelativeLayout>
    <EditText
        android:id="@+id/et_5"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:hint="@string/main_name3"
        android:layout_gravity="center"
        android:drawablePadding="5dp"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:background="@drawable/ac_frame"
        android:backgroundTint="@color/LightGrey"
        />

    <EditText
        android:id="@+id/et_6"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:hint="@string/main_name5"
        android:layout_gravity="center"
        android:drawablePadding="5dp"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ac_frame"
        android:backgroundTint="@color/LightGrey"
        />

</LinearLayout>